# rust_chat_server_websockets

./: Cargo.toml
src/: auth.rs  database.rs  main.rs
